Home page style

--- a/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
@@ -33,31 +33,47 @@
             </div>
           </div>
         </nav>
+         <section id="family" class="col-md-12">
+            <div id="mini-game" class="row-centered">
+                <div class="col-md-8" style="float:none;margin:auto;">
+                    <span class="minigame-title wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
+                        Regroupez toutes vos applications et gérez les en un clic !
+                    </span>
+                    <div class="minigame-text wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
+                        <p>ApiProject permet de rassemblez toutes vos applications au sein d'un seul et unique service !</p> 
+                        <p>De cette façon, vous êtes toujours <strong>connectés</strong> à vos amis !</p> 
+                        <p>Ne perdez plus de <strong>temps</strong> à jongler entre toutes vos apps.</p> 
+                        <p>Découvrez comment chatter en <strong>un seul</strong> clic!</p> 
+                        <p><strong>Snapchat, Whatsapp, et bien plus encore</strong> : centralisez vos apps gratuitement!</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div id="feature-container" class="col-md-10">
             <div id="feature" class="row">
                 <div class="features">
-                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-arrows"></i>
                             <h2>Drag&Drop</h2>
                             <h3>Une interface simple et intuitive pour créer vos sondages</h3>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="col-md-3 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-pie-chart"></i>
                             <h2>Statistiques</h2>
                             <h3>Obtenez des statistiques ultra détaillées sur vos utilisateurs</h3>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-rocket"></i>
                             <h2>Visibilité</h2>
                             <h3>Grâce aux QRcodes, vous pouvez atteindre des milliers d'utilisateurs</h3>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                    <div class="col-md-3 col-sm-4 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1600ms">
                         <div class="feature-wrap">
                             <i class="fa fa-gamepad"></i>
                             <h2>Mini-jeu</h2>
