--- a/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
+++ b/src/MTI/ApiProjectHomeBundle/Resources/views/Home/index.html.twig
@@ -24,6 +24,9 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">Brand</a>
+                {% if app.user %}
+                    Bonjour {{ app.user.username }}
+                {% endif %}
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav navbar-right">
