--- a/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
+++ b/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
@@ -18,30 +18,14 @@
         <script src="{{asset('js/chartjslegend.js')}}"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <div class="navbar-header">
-              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-              <a class="navbar-brand" href="#">Brand</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Nos offres</a></li>
-                <li><a href="#">Le produit</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
+        {% include "::navbar.html.twig" %}
         <div id="sub-menu">
           <div id="burger-menu">
             <div class="fa fa-bars"><span>Menu</span></div>
           </div>
-          <div>
+          <div style="display: inline-block;padding-left:50px;">
+            <span class="label label-success">Clé publique de l'API</span> {{ app.user.publicapikey }}
+            <span class="label label-danger" style="margin-left:50px">Clé privée de l'API</span> {{ app.user.secretapikey }}
           </div>
         </div>
         <div id="sidebar">
