--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Brand</a>
+      <a class="navbar-brand" href="{{ path('homepage') }}">LaBonneApi</a>
       {% if app.user %}
       Bonjour {{ app.user.username }}
       {% endif %}
@@ -21,6 +21,9 @@
         {% endif %}
         {% if app.user == null %}
         <li><a href="#" data-toggle="modal" data-target="#myModal2">Inscription</a></li>
+        {% endif %}
+        {% if app.user %}
+        <li><a href="{{ path('mti_user_back_office_homepage') }}">Mon compte</a></li>
         {% endif %}
         {% if app.user %}
         <li><a href="{{ path('logout') }}">Logout</a></li>
