check usef token and limitation

--- a/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
+++ b/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
@@ -26,6 +26,7 @@
           <div style="display: inline-block;padding-left:50px;">
             <span class="label label-success">Clé publique de l'API</span> {{ app.user.publicapikey }}
             <span class="label label-danger" style="margin-left:50px">Clé privée de l'API</span> {{ app.user.secretapikey }}
+            <span class="label label-default" style="margin-left:50px">Token généré</span> {{ token }}
           </div>
         </div>
         <div id="sidebar">
