--- a/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
+++ b/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
@@ -29,35 +29,71 @@
             <span class="label label-default" style="margin-left:50px">Token généré</span> {{ token }}
           </div>
         </div>
-        <div id="sidebar">
+        <div id="sidebar" role="tablist">
           <ul>
-            <li><i class="fa fa-whatsapp"><span>Whatsapp</span></i></li>
-            <li><i class="fa fa-image"><span>Snapchat</span></i></li>
+            <li role="presentation">
+              <a href="#dashboard" id="dashboard-tab" role="tab" data-toggle="tab" aria-controls="dashboard" aria-expanded="true">
+                  <i class="fa fa-th"><span>Dashboard</span></i>
+              </a>
+            </li>
+            <li role="presentation">
+              <a href="#profile" id="profile-tab" role="tab" data-toggle="tab" aria-controls="profile">
+                <i class="fa fa-user"><span>Profil</span></i>
+              </a>
+            </li>
           </ul>
         </div>
-        <div id="bo-content">
-          <div class="col-sm-3" id="limit">
-            <div class="chartcontainer">
-              <h3>Nombre d'appels</h3>
-          		<canvas id="foo"></canvas>
-              <div id="gauge-value"></div>
+        <div id="bo-content" class="tab-content">
+          <div role="tabpanel" id="dashboard" class="tab-pane fade active in" aria-labelledby="dashboard-tab">
+            <div class="col-sm-3" id="limit">
+              <div class="chartcontainer">
+                <h3>Nombre d'appels</h3>
+            		<canvas id="foo"></canvas>
+                <div id="gauge-value"></div>
+              </div>
+            </div>
+            <div class="col-sm-3" style="position:relative">
+              <div class="chartcontainer">
+                <h3 style="margin-bottom:27px;">Statistiques</h3>
+                <canvas id="myChart" width="150" height="150"></canvas>
+                <div id="legend"></div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="chartcontainer">
+                <h3 style="margin-bottom:27px;">Nombre d'appels</h3>
+                <canvas id="myChart2" width="550" height="150"></canvas>
+              </div>
             </div>
           </div>
-          <div class="col-sm-3" style="position:relative">
-            <div class="chartcontainer">
-              <h3 style="margin-bottom:27px;">Statistiques</h3>
-              <canvas id="myChart" width="150" height="150"></canvas>
-              <div id="legend"></div>
+          <div role="tabpanel" id="profile" class="tab-pane fade col-md-6" aria-labelledby="profile-tab">
+            <div class="panel panel-default" id="profile-settings">
+            <div class="panel-heading">
+              <i class="fa fa-user"></i> Profil
             </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="chartcontainer">
-              <h3 style="margin-bottom:27px;">Nombre d'appels</h3>
-              <canvas id="myChart2" width="550" height="150"></canvas>
+            <div class="panel-body">
+              <div class="form-group group-clear">
+                <label class="col-sm-3 control-label">Prénom:</label>
+                <div class="col-sm-8">{{app.user.username}}</div>
+              </div>
+              <div class="form-group group-clear">
+                <label class="col-sm-3 control-label">Nom:</label>
+                <div class="col-sm-8">{{app.user.lastname}}</div>
+              </div>
+              <div class="form-group group-clear">
+                <label class="col-sm-3 control-label">Email:</label>
+                <div class="col-sm-8">{{app.user.email}}</div>
+              </div>
             </div>
           </div>
         </div>
 		<script type="text/javascript">
+
+    $('#sidebar a').click(function (e) {
+      console.log("ok");
+      e.preventDefault()
+      $(this).tab('show')
+    })
         $('.fa-bars').click(function (){
             if ($('#sidebar').is(":visible") === true) {
               $('#sidebar').animate({
