--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -4807,7 +4807,8 @@ a.label:focus {
   background-color: #c9302c;
 }
 .badge {
-  display: inline-block;
+  right: 7px;
+  position: absolute;
   min-width: 10px;
   padding: 3px 7px;
   font-size: 12px;
@@ -4817,7 +4818,7 @@ a.label:focus {
   text-align: center;
   white-space: nowrap;
   vertical-align: baseline;
-  background-color: #777;
+  background-color: #181A1C;
   border-radius: 10px;
 }
 .badge:empty {
