--- a/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
+++ b/src/MTI/UserBackOfficeBundle/Resources/views/Backoffice/index.html.twig
@@ -51,6 +51,7 @@
         </div>
         <div id="bo-content" class="tab-content">
           <div role="tabpanel" id="dashboard" class="tab-pane fade active in" aria-labelledby="dashboard-tab">
+            <div class="row">
             <div class="col-sm-3" id="limit">
               <div style="padding: 6px 10px 30% 10px; background-color: white">
               <div class="chartcontainer">
@@ -77,6 +78,8 @@
               </div>
                 </div>
             </div>
+            </div>
+            <div class="row">
             <div class="col-sm-5"  style="margin-top: 25px; margin-bottom: 50px">
                 <div style="padding: 0 10px 5% 10px; background-color: white">
               <div class="chartcontainer"> 
@@ -87,9 +90,11 @@
             </div>
             <div class="col-sm-7" style="margin-top: 25px; margin-bottom: 50px">
                 <div style="padding: 0; margin: 0; background-color: white; overflow: hidden">
-                  <div id="regions_div" style="height: 400px; float: right; margin-top: -5px"></div>
+                  <div id="regions_div" style="height: 50%; float: right; margin-top: -5px"></div>
                 </div>
             </div>
+            </div>
+        </div>
           <div role="tabpanel" id="profile" class="tab-pane fade" aria-labelledby="profile-tab">
             <div class="col-md-5">
               <div class="panel panel-default" id="profile-settings" style="padding-left:0px;padding-right:0px;">
